[gd_scene load_steps=3 format=3 uid="uid://cp2ic5g74yayl"]

[ext_resource type="Script" path="res://unit_tests/health/player_health.gd" id="1_hqvjg"]
[ext_resource type="Script" path="res://src/health.gd" id="2_jfgxf"]

[node name="MainHealth" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="."]
script = ExtResource("1_hqvjg")

[node name="Health" type="Node" parent="Player"]
script = ExtResource("2_jfgxf")

[node name="CenterContainer" type="Container" parent="Player"]
offset_right = 1923.0
offset_bottom = 1068.0

[node name="HBoxContainer" type="Control" parent="Player/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Player/CenterContainer/HBoxContainer"]
layout_mode = 2
offset_left = 588.0
offset_top = 50.0
offset_right = 1333.0
offset_bottom = 284.0

[node name="Labels" type="HBoxContainer" parent="Player/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Current" type="Label" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Slash" type="Label" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "/"

[node name="Max" type="Label" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Buttons" type="HBoxContainer" parent="Player/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="DamageButton" type="Button" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Damage"

[node name="HealButton" type="Button" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Heal"

[node name="Buttons2" type="HBoxContainer" parent="Player/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="ReduceMAX" type="Button" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Buttons2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Reduce MAX"

[node name="IncreaseMAX" type="Button" parent="Player/CenterContainer/HBoxContainer/VBoxContainer/Buttons2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Increase MAX"

[node name="Log" type="Label" parent="Player/CenterContainer/HBoxContainer"]
layout_mode = 2
offset_left = 600.0
offset_top = 348.0
offset_right = 1127.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 50
text = "Click a button to start"
